# folding-waves

./: .env.dist  .gitignore  LICENSE  README.md  devenv.nix  manage.py  pyproject.toml
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py
website/migrations/: 0002_initial_data.py
